@@ -6,3 +6,7 @@ command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFO
 
 [program:sshd]
 command=/usr/sbin/sshd -D
+
+[program:buildscript]
+command=/bin/bash /tmp/build.sh
+autorestart=false
