@@ -1,6 +1,9 @@
 # Change Log
 All notable changes to this project will be documented in this file.
 
+## [Unreleased]
+- PNDA-2326: launch the build script automatically and make the jdk available through http
+
 ## [0.1.0] 2016-07-01
 ### First version
 - Create a package server container for provisioning PNDA
